Fix pending members table visibility issue (bug #690) (#701)
* Fix pending members table visibility issue bug #690

* Update snapshot for PendingMembers component

--- a/frontend/src/components/team/pendingMembers/PendingMembers.module.css
+++ b/frontend/src/components/team/pendingMembers/PendingMembers.module.css
@@ -1,3 +1,7 @@
+.pending-members-container {
+    overflow-y: scroll;
+}
+
 .no-users-msg {
     font-weight: 600;
     font-size: 18xx;
